lesson11/css/small.css
h1 {
    font-size: 24px;
}

h2 {
    font-size: 16px;
}

p {
    font-size: 14px;
}

body {
    margin: 0 auto;
    font-size: 16px;
    line-height: 1.5;
    font-family: 'Noto Sans', sans-serif;
}

#announce {
    display: none;
    text-align: center;
    background-color: lightgoldenrodyellow;
}

#announce p {
    margin: 0px;
    padding: 2px;
    font-weight: bold;
}

header {
    background-color: orange;
    color: black;
    display: flex;
    align-items: center;
    justify-content: center;
}

.myicon {
    width: 70px;
    margin-right: 5px;
}

.sitename {
    text-align: left;
    margin: 0;
    padding: 0;
}

.sitemotto {
    font-size: 12px;
    text-align: left;
    margin: 0;
    padding: 0;
    font-style: italic;
}

nav {
    margin: 0 auto;
    background-color: #fcc765;
}

.navigation {
    list-style: none;
    padding: 0;
    margin: 0;
}

.navigation li:first-child {
    display: block;
}

.navigation li {
    display: none;
}

.navigation a {
    display: block;
    padding: 0.75rem;
    text-align: center;
    text-decoration: none;
    color: black;
}

.navigation a:hover {
    font-weight: bold;
    background-color: orange;
}

.responsive li {
    display: block;
}

.navigation .currentpage {
    text-decoration-line: underline;
    font-weight: bold;
}

.mycontent {
    min-height: 100px;
    text-align: left;
    margin: 0 auto;
    padding: 10px;
}

.cards {
    display: grid;
}

.townsect {
    display: grid;
    justify-content: center;
    text-align: center;
    /*border: 1px solid #754100;*/
    padding: 10px;
    margin: 10px 0px 10px 0px;
    background-color: lightgoldenrodyellow;
    border-radius: 5px;
    box-shadow: 0 0 10px black;
}

.towninfo h2 {
    font-size: 25px;
    text-decoration: underline;
    margin-bottom: 0px;
}

.towninfo :nth-child(2) {
    margin-top: 0px;
    font-weight: bold;
    font-style: italic;
    font-size: 12px;
}

.townimg {
    width: 100%;
    border-radius: 5px;
    border: 1px solid black;
}

.inputarea {
    align-content: center;
    max-width: 700px;
    padding: 10px;
    background-color: lightgoldenrodyellow;
    margin: 15px auto;
    border: solid #fcc765 2px;
    border-radius: 5px;
    display: grid;
    font-weight: bold;
}

.inputarea * {
    margin: 5px;
}

.inputarea :nth-child(1) {
    text-align: center;
    text-decoration: underline;
}

.inputarea:nth-child(1) input {
    padding: 5px;
    border-color: #fcc765;
}

.inputarea:nth-child(2) input {
    border-color: #fcc765;
}

.inputarea:nth-child(2) :nth-child(10), :nth-child(9), :nth-child(8) {
    margin-top: 0;
}

.inputarea:nth-child(2) :nth-child(11) {
    display: grid;
}

.inputarea:nth-child(2) :nth-child(11) :nth-child(1) {
    min-height: 100px;
    margin: 0;
}

.inputarea:nth-child(2) :nth-child(12) {
    margin-top: 10px;
    justify-self: center;
    max-width: 100px;
}

.subcontent {
    position: relative;
    margin: 0px 0px 15px 0px;
    overflow: hidden;
}

.hero * {
    max-width: 100%;
}

.summary {
    background: rgba(255, 229, 173, 0.8);
    border: 1px solid #000;
    padding: 5px;
}

.summary h2 {
    text-align: center;
    font-size: 24px;
    margin: 0;
    border-bottom: 1px solid black;
}

.sumtable {
    table-layout: fixed;
    width: 100%;
    font-size: 17px;
}

.fcol {
    text-align: right;
    font-weight: bold;
}

.fortable {
    width: 100%;
}

.fortable th {
    background-color: #fcc765;
}

.fortable td {
    background-color: lightgoldenrodyellow;
}

.fortable, .fortable th, .fortable td {
    border: 1px solid black;
    border-collapse: collapse;
    padding: 5px;
}

.fortable td, .fortable th {
    text-align: center;
}

.wicon {
    width: 50px;
}

.article {
    margin: 10px 0px 0px 0px;
    text-indent: 50px;
}

.kiteimg {
    width: 100%;
}

.contact {
    background-color: #fcc765;
    display: block;
    justify-content: center;
    margin: 0 auto;
}

iframe {
    width: 100%;
    height: 300px;
}

.cinfo {
    margin-left: 50px;
}

.smedia img {
    max-width: 40px;
    margin-right: 15px;
}

.img_grd {
    display: grid;
    grid-template-columns: 1fr;
    justify-items: center;
}

.w_pic {
    margin: 20px;
    text-align: center;
    box-shadow: 0 0 15px #111;
    border-radius: 5px;
}

.w_pic .w_img[data-src] {
    filter: blur(5px);
    border-radius: 5px 5px 0px 0px;
}

.w_pic .w_img {
    filter: blur(0px);
    transition: filter 0.5s;
    border-radius: 5px 5px 0px 0px;
}

.w_img_p {
    font-size: 16px;
}

footer {
    margin-top: 10px;
}

footer {
    color: #000000;
}

.byu {
    color: blue;
}

.navback:hover, .byu:hover {
    color: lightblue;
}

footer, .byu {
    background-color: #fafad2;
    font-size: 12px;
}

header, nav, footer{
    margin: 0 auto;
    text-align: center;
}

header, footer, .contact {
    padding: 12px;
}

.navback {
    color: blue;
    font-size: 12px;
    display: block;
    text-align: left;
}

